--- a/style.css
+++ b/style.css
@@ -256,10 +256,10 @@ article .articleFlow {
          -o-column-width: 450px;
             column-width: 450px;
     
-    -webkit-column-count: 2;
-       -moz-column-count: 2;
-         -o-column-count: 2;
-            column-count: 2;
+    -webkit-column-count: auto;
+       -moz-column-count: auto;
+         -o-column-count: auto;
+            column-count: auto;
     
     -webkit-column-gap: 40px;
        -moz-column-gap: 40px;
